--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,14 @@
             "email": "skygdi83@gmail.com"
         }
     ],
-    "require": {}
+    "minimum-stability": "stable",
+    "license": "MIT",
+    "require": {
+        "php": ">=5.3.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Skygdi\\DeviceToken\\": "src/"
+        }
+    }
 }
